// =============================================================================
// SISTEMA DE GESTIÓN DE GRANJA - ESQUEMA EN DBML
// Visualización: https://dbdiagram.io
// =============================================================================

Project granja_db {
  database_type: 'MySQL'
  Note: '''
    Sistema de gestión de granja.
    Cubre: animales, empleados, actividades rurales, autenticación,
    trazabilidad sanitaria y logs de auditoría.
  '''
}

// =============================================================================
// ENUMS
// =============================================================================

Enum tipo_ubicacion {
  CORRAL
  POTRERO
  ESTABLO
  GALPON
  OTRO
}

Enum sexo_animal {
  M
  H
}

Enum estado_salud {
  SANO
  OBSERVACION
  ENFERMO
  CRITICO
}

Enum estado_animal {
  ACTIVO
  VENDIDO
  FALLECIDO
  TRASLADADO
}

Enum tipo_evento {
  VENTA
  FALLECIMIENTO
  TRASLADO
  INGRESO
}

Enum severidad {
  BAJA
  MEDIA
  ALTA
  URGENTE
}

Enum nivel_log {
  INFO
  WARN
  ERROR
  CRITICAL
}

// =============================================================================
// CATÁLOGOS
// =============================================================================

Table roles {
  id_rol         integer      [pk, increment]
  nombre         varchar(50)  [not null, unique]
  descripcion    varchar(200)
  fecha_creacion timestamp    [not null, default: `CURRENT_TIMESTAMP`]
}

Table especies {
  id_especie        integer      [pk, increment]
  nombre            varchar(50)  [not null, unique]
  nombre_cientifico varchar(100)
  descripcion       varchar(200)
}

Table razas {
  id_raza     integer      [pk, increment]
  id_especie  integer      [not null]
  nombre      varchar(80)  [not null]
  descripcion varchar(200)

  Indexes {
    (id_especie, nombre) [unique, name: 'uk_raza_especie']
  }
}

Table ubicaciones {
  id_ubicacion  integer        [pk, increment]
  nombre        varchar(80)    [not null, unique]
  tipo          tipo_ubicacion [not null]
  capacidad_max integer
  descripcion   varchar(200)
  activa        boolean        [not null, default: true]
}

Table tipos_actividad {
  id_tipo_actividad integer      [pk, increment]
  nombre            varchar(60)  [not null, unique]
  requiere_animales boolean      [not null, default: false]
  descripcion       varchar(200)
}

// =============================================================================
// PERSONAL Y AUTENTICACIÓN
// =============================================================================

Table empleados {
  id_empleado        integer      [pk, increment]
  documento          varchar(30)  [unique]
  nombre             varchar(80)  [not null]
  apellido           varchar(80)  [not null]
  id_rol             integer      [not null]
  telefono           varchar(30)
  email              varchar(120)
  fecha_contratacion date         [not null]
  fecha_baja         date
  activo             boolean      [not null, default: true]
  observaciones      varchar(255)

  Indexes {
    activo [name: 'idx_empleado_activo']
    id_rol [name: 'idx_empleado_rol']
  }

  Note: 'CHECK constraint: fecha_baja IS NULL OR fecha_baja >= fecha_contratacion'
}

Table usuarios {
  id_usuario        integer      [pk, increment]
  username          varchar(50)  [not null, unique]
  password_hash     varchar(255) [not null, note: 'Hash BCrypt, nunca texto plano']
  id_empleado       integer      [unique]
  es_admin          boolean      [not null, default: false]
  activo            boolean      [not null, default: true]
  fecha_creacion    timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  ultimo_acceso     timestamp
  intentos_fallidos integer      [not null, default: 0]
}

// =============================================================================
// ANIMALES Y TRAZABILIDAD
// =============================================================================

Table animales {
  id_animal           integer       [pk, increment]
  identificador_unico varchar(30)   [not null, unique, note: 'Arete, chip o caravana']
  id_raza             integer       [not null]
  id_ubicacion        integer
  fecha_nacimiento    date          [not null]
  sexo                sexo_animal   [not null]
  peso_kg             decimal(7,2)
  estado_salud        estado_salud  [not null, default: 'SANO']
  estado              estado_animal [not null, default: 'ACTIVO']
  fecha_registro      timestamp     [not null, default: `CURRENT_TIMESTAMP`]
  observaciones       varchar(255)

  Indexes {
    estado       [name: 'idx_animal_estado']
    estado_salud [name: 'idx_animal_estado_salud']
    id_raza      [name: 'idx_animal_raza']
    id_ubicacion [name: 'idx_animal_ubicacion']
  }

  Note: 'CHECK constraint: fecha_nacimiento <= CURRENT_DATE'
}

Table eventos_animal {
  id_evento      integer        [pk, increment]
  id_animal      integer        [not null]
  tipo_evento    tipo_evento    [not null]
  fecha_evento   date           [not null]
  motivo         varchar(200)
  valor          decimal(12,2)  [note: 'Precio en caso de venta']
  contraparte    varchar(120)   [note: 'Comprador o destino del traslado']
  id_empleado    integer
  fecha_registro timestamp      [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    id_animal    [name: 'idx_evento_animal']
    fecha_evento [name: 'idx_evento_fecha']
  }
}

Table historial_salud {
  id_historial   integer       [pk, increment]
  id_animal      integer       [not null]
  estado_salud   estado_salud  [not null]
  severidad      severidad     [not null, default: 'BAJA']
  diagnostico    varchar(255)
  tratamiento    varchar(255)
  id_empleado    integer
  fecha_registro timestamp     [not null, default: `CURRENT_TIMESTAMP`]
  atendido       boolean       [not null, default: false]

  Indexes {
    (id_animal, fecha_registro) [name: 'idx_salud_animal_fecha']
    (severidad, atendido)       [name: 'idx_salud_severidad']
  }

  Note: 'Alimenta al Notificador: filtrar severidad IN (ALTA, URGENTE) AND atendido = false'
}

// =============================================================================
// ACTIVIDADES RURALES
// =============================================================================

Table actividades {
  id_actividad      integer      [pk, increment]
  id_tipo_actividad integer      [not null]
  id_empleado       integer      [not null]
  fecha             date         [not null]
  hora              time         [not null]
  descripcion       varchar(255)
  fecha_registro    timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    fecha             [name: 'idx_actividad_fecha']
    id_empleado       [name: 'idx_actividad_empleado']
    id_tipo_actividad [name: 'idx_actividad_tipo']
  }
}

Table actividad_animal {
  id_actividad integer      [not null]
  id_animal    integer      [not null]
  observacion  varchar(200)

  Indexes {
    (id_actividad, id_animal) [pk]
  }

  Note: 'Tabla puente N:M entre actividades y animales'
}

// =============================================================================
// AUDITORÍA
// =============================================================================

Table logs_sistema {
  id_log        bigint       [pk, increment]
  fecha_hora    timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  nivel         nivel_log    [not null]
  usuario       varchar(50)  [note: 'username que ejecutó la acción']
  accion        varchar(80)  [not null, note: 'LOGIN, ALTA_ANIMAL, BAJA_EMPLEADO, etc.']
  entidad       varchar(50)
  id_entidad    varchar(30)
  mensaje       varchar(500)
  detalle_error text

  Indexes {
    fecha_hora [name: 'idx_log_fecha']
    nivel      [name: 'idx_log_nivel']
    usuario    [name: 'idx_log_usuario']
  }
}

// =============================================================================
// RELACIONES
// =============================================================================

Ref: razas.id_especie              > especies.id_especie
Ref: empleados.id_rol              > roles.id_rol
Ref: usuarios.id_empleado          - empleados.id_empleado    // 1:1
Ref: animales.id_raza              > razas.id_raza
Ref: animales.id_ubicacion         > ubicaciones.id_ubicacion
Ref: eventos_animal.id_animal      > animales.id_animal
Ref: eventos_animal.id_empleado    > empleados.id_empleado
Ref: historial_salud.id_animal     > animales.id_animal
Ref: historial_salud.id_empleado   > empleados.id_empleado
Ref: actividades.id_tipo_actividad > tipos_actividad.id_tipo_actividad
Ref: actividades.id_empleado       > empleados.id_empleado
Ref: actividad_animal.id_actividad > actividades.id_actividad
Ref: actividad_animal.id_animal    > animales.id_animal

// =============================================================================
// AGRUPACIÓN VISUAL
// =============================================================================

TableGroup catalogos {
  roles
  especies
  razas
  ubicaciones
  tipos_actividad
}

TableGroup personal {
  empleados
  usuarios
}

TableGroup ganado {
  animales
  eventos_animal
  historial_salud
}

TableGroup operaciones {
  actividades
  actividad_animal
}

TableGroup auditoria {
  logs_sistema
}

// =============================================================================
// DATOS INICIALES (SEED)
// =============================================================================

Records roles(id_rol, nombre, descripcion) {
  1, 'ADMIN', 'Administrador del sistema'
  2, 'VETERINARIO', 'Profesional veterinario'
  3, 'ENCARGADO', 'Encargado de la granja'
  4, 'PEON', 'Peón rural'
}

Records especies(id_especie, nombre, nombre_cientifico) {
  1, 'Bovino', 'Bos taurus'
  2, 'Ovino', 'Ovis aries'
  3, 'Porcino', 'Sus scrofa domesticus'
  4, 'Equino', 'Equus caballus'
  5, 'Aves', 'Gallus gallus domesticus'
}

Records razas(id_raza, id_especie, nombre) {
  1, 1, 'Holstein'
  2, 1, 'Aberdeen Angus'
  3, 1, 'Hereford'
  4, 2, 'Merino'
  5, 2, 'Corriedale'
  6, 3, 'Yorkshire'
  7, 3, 'Duroc'
  8, 4, 'Criollo'
  9, 5, 'Leghorn'
}

Records ubicaciones(id_ubicacion, nombre, tipo, capacidad_max) {
  1, 'Corral 1', 'CORRAL', 50
  2, 'Corral 2', 'CORRAL', 50
  3, 'Potrero Norte', 'POTRERO', 200
  4, 'Potrero Sur', 'POTRERO', 200
  5, 'Establo A', 'ESTABLO', 30
  6, 'Galpón Aves', 'GALPON', 500
}

Records tipos_actividad(id_tipo_actividad, nombre, requiere_animales) {
  1, 'Ordeñe', true
  2, 'Alimentación', true
  3, 'Vacunación', true
  4, 'Desparasitado', true
  5, 'Limpieza', false
  6, 'Mantenimiento', false
  7, 'Esquila', true
  8, 'Pesaje', true
}

Records empleados(id_empleado, documento, nombre, apellido, id_rol, fecha_contratacion) {
  1, '00000000', 'Admin', 'Sistema', 1, '2026-01-01'
}

Records usuarios(id_usuario, username, password_hash, id_empleado, es_admin) {
  1, 'admin', '$2a$10$REEMPLAZAR_CON_HASH_BCRYPT_REAL', 1, true
}

// =============================================================================
// NOTAS PARA RECREAR EN MYSQL DESPUÉS DE IMPORTAR EL DDL
// =============================================================================
//
// Las vistas y triggers no son representables en DBML. Recordá agregarlos
// manualmente al script SQL exportado:
//
// 1. VISTAS DE REPORTES:
//    - v_animales_por_especie       (conteo de activos por especie)
//    - v_animales_atencion_urgente  (alimenta el Notificador)
//    - v_empleados_mas_activos      (ranking por cantidad de actividades)
//    - v_actividades_por_fecha      (resumen diario por tipo)
//
// 2. TRIGGER DE CONSISTENCIA:
//    - trg_actualiza_estado_salud: AFTER INSERT en historial_salud,
//      sincroniza animales.estado_salud con el último registro.
//
// 3. CHECK CONSTRAINTS (ya documentados como Note en cada tabla):
//    - empleados: fecha_baja >= fecha_contratacion
//    - animales:  fecha_nacimiento <= CURRENT_DATE
